fix misalignment of breadcrumbs

--- a/Launchpad2/launchpad2-style1/sass/styles.scss
+++ b/Launchpad2/launchpad2-style1/sass/styles.scss
@@ -604,6 +604,7 @@
     li a, li span {
       color: $base-color-blue;
     }
+    li div { display: inline; }
     li div a span { font-size: emCalc(16px); }
   }
   .pagination {
